custom css loading flicker fixes

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -1,6 +1,9 @@
 .js-disabled-message {
   display: none;
 }
+body {
+  display: none;
+}
 
 .reveal {
   opacity: 0.3;
